namespace DSC.Data.Models
{
    public class Union
    {
        public int Id { get; set; }
        public string? Name { get; set; }
    }
}
